--- a/index.html
+++ b/index.html
@@ -9,11 +9,41 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.main.css"
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="site-nav">
+        <div class="conteiner stnav-conteiner">
+          <a href="./index.html">
+            <img src="./img/svg/logo.svg" alt="cofe-icon" />
+          </a>
+          <div class="sitnav-link">
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#">Our Menu</a>
+            <a class="nav-link" href="#">Contact Us</a>
+          </div>
+          <div class="sitenav-icon">
+            <a href="#">
+              <img src="./img/svg/shop.svg" alt="shop-icon" />
+              <img src="./img/svg/user.svg" alt="user-icon" />
+            </a>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
