navbar responsive add

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
     <header>
       <nav class="site-nav">
         <div class="conteiner stnav-conteiner">
-          <a href="./index.html">
-            <img src="./img/svg/logo.svg" alt="cofe-icon" />
-          </a>
+          <div class="navleft">
+            <div class="menu-btn"><img src="./img/svg/Vector.svg" /></div>
+            <a href="./index.html">
+              <img class="logo" src="./img/svg/logo.svg" alt="cofe-icon" />
+            </a>
+          </div>
           <div class="sitnav-link">
             <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="#">About Us</a>
