--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -45,6 +51,14 @@
           </div>
         </div>
       </nav>
+      <section class="hero">
+        <div class="conteiner hero-conteiner">
+          <h1 class="title">Relax & Enjoy Your Coffee</h1>
+          <a class="down-arrow" href="#">
+            <img src="./img/svg/strelka.svg" alt="" />
+          </a>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
