--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <img class="logo" src="./img/svg/logo.svg" alt="cofe-icon" />
             </a>
           </div>
-          <div class="sitnav-link">
+          <div class="sitnavlink">
             <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="#">About Us</a>
             <a class="nav-link" href="#">Our Menu</a>
@@ -60,7 +60,33 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <div class="conteiner about-conteiner">
+          <div class="about-intro">
+            <h1 class="section-title">About Us</h1>
+            <img class="about-img2" src="./img/png/logo21.png" />
+            <p class="text">
+              Our coffee bar uses only Ethiopian coffee. All commercially
+              produced coffee originates from Ethiopia. We love Ethiopia for
+              providing the world with coffee to grow, and we continue to love
+              the flavor of that country’s coffee. The fruity acidity of this
+              single origin coffee is balanced by its sweet honey notes,
+              creating soft, light notes with a light character.
+            </p>
+            <button class="btn">Learn More</button>
+          </div>
+          <div class="about-img">
+            <img src="./img/png/logo21.png" />
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="ddd">
+          <h3 class="Features">Features</h3>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
