index.html edit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <img class="logo" src="./img/svg/logo.svg" alt="cofe-icon" />
             </a>
           </div>
-          <div class="sitnavlink">
+          <div class="sitnav-link">
             <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="#">About Us</a>
             <a class="nav-link" href="#">Our Menu</a>
@@ -65,7 +65,9 @@
         <div class="conteiner about-conteiner">
           <div class="about-intro">
             <h1 class="section-title">About Us</h1>
-            <img class="about-img2" src="./img/png/logo21.png" />
+            <div class="about-img2">
+              <img src="./img/png/logo21.png" />
+            </div>
             <p class="text">
               Our coffee bar uses only Ethiopian coffee. All commercially
               produced coffee originates from Ethiopia. We love Ethiopia for
@@ -81,9 +83,55 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="ddd">
-          <h3 class="Features">Features</h3>
+      <section class="features">
+        <div class="conteiner features-conteiner">
+          <div class="features-intro">
+            <h2 class="section-title">Features</h2>
+          </div>
+          <div class="features-head">
+            <div class="shop">
+              <img src="./img/svg/cafe.svg" alt="cofe" />
+              <h2 class="section2">High Quality</h2>
+              <p class="text2">
+                Enjoy an unrivaled coffee taste sensation with our selected
+                coffee beans, carefully roasted to create a fresh cup of coffee
+                that captivates your taste buds.
+              </p>
+            </div>
+            <div class="shop">
+              <img src="./img/svg/wi-fi.svg" alt="wi-fi" />
+              <h2 class="section2">Fast Wi-Fi and Work Area</h2>
+              <p class="text2">
+                Combine productivity with the pleasure of coffee. Enjoy a
+                super-fast Wi-Fi connection and a comfortable workspace, where
+                creative ideas bloom while sipping your favorite coffee.
+              </p>
+            </div>
+            <div class="shop">
+              <img
+                src="./img/svg/ChalkboardTeacher.svg"
+                alt="ChalkboardTeacher"
+              />
+              <h2 class="section2">Comfortable and Friendly Room</h2>
+              <p class="text2">
+                Find the perfect place to gather, work or relax with friends in
+                a warm and friendly atmosphere. Our spaces are designed to
+                create a pleasant experience.
+              </p>
+            </div>
+            <div class="shop">
+              <img
+                src="./img/svg/ChalkboardTeacher.svg"
+                alt="ChalkboardTeacher"
+              />
+              <h2 class="section2">Creative and Innovative Menu</h2>
+              <p class="text2">
+                There is always something new to try on every visit. From
+                specialty coffees to delicious snacks, our menu is designed to
+                satisfy a variety of tastes.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
