coffee edit full

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 that captivates your taste buds.
               </p>
             </div>
+
             <div class="shop">
               <img src="./img/svg/wi-fi.svg" alt="wi-fi" />
               <h2 class="section2">Fast Wi-Fi and Work Area</h2>
@@ -107,6 +108,7 @@
                 creative ideas bloom while sipping your favorite coffee.
               </p>
             </div>
+
             <div class="shop">
               <img
                 src="./img/svg/ChalkboardTeacher.svg"
@@ -119,6 +121,7 @@
                 create a pleasant experience.
               </p>
             </div>
+
             <div class="shop">
               <img
                 src="./img/svg/ChalkboardTeacher.svg"
@@ -134,7 +137,140 @@
           </div>
         </div>
       </section>
+      <section class="our-menu">
+        <div class="conteiner our-menu-conteiner">
+          <div class="features-intro">
+            <h2 class="section-title">Our Menu</h2>
+          </div>
+
+          <div class="btn12"><button class="btn">See All Products</button></div>
+
+          <div class="americano3">
+            <div class="americano">
+              <img class="qqq" src="/img/png/kofe.png" alt="kofe" />
+              <h2 class="americano-coffee">Americano Coffee</h2>
+              <div>
+                <div class="yulduz">
+                  <img src="./img/png/yulduz.png" />
+                  <p class="son">5.9</p>
+                </div>
+                <p class="text3">
+                  Lorem ipsum dolor sit amet consectetur. Fermentum dolor nibh
+                  lectus aenean eu sit ut. Eget tortor nullam eros pretium
+                  tincidunt ipsum at.
+                </p>
+                <div class="son3">
+                  <h2 class="son2">$ 13.6</h2>
+                  <button class="ShoppingCartSimple">
+                    <img src="./img/svg/ShoppingCartSimple.svg" />
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="americano">
+              <img
+                class="qqq"
+                src="/img/png/Espresso-Coffee.png"
+                alt="Espresso-Coffee"
+              />
+              <h2 class="americano-coffee">Espresso Coffee</h2>
+              <div>
+                <div class="yulduz">
+                  <img src="./img/png/yulduz.png" />
+                  <p class="son">5.9</p>
+                </div>
+                <p class="text3">
+                  Lorem ipsum dolor sit amet consectetur. Fermentum dolor nibh
+                  lectus aenean eu sit ut. Eget tortor nullam eros pretium
+                  tincidunt ipsum at.
+                </p>
+                <div class="son3">
+                  <h2 class="son2">$ 18.1</h2>
+                  <button class="ShoppingCartSimple">
+                    <img src="./img/svg/ShoppingCartSimple.svg" />
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="americano">
+              <img
+                class="qqq"
+                src="/img/png/Latte-Coffee.png"
+                alt="Latte-Coffee"
+              />
+              <h2 class="americano-coffee">Latte Coffee</h2>
+              <div>
+                <div class="yulduz">
+                  <img src="./img/png/yulduz.png" />
+                  <p class="son">5.9</p>
+                </div>
+                <p class="text3">
+                  Lorem ipsum dolor sit amet consectetur. Fermentum dolor nibh
+                  lectus aenean eu sit ut. Eget tortor nullam eros pretium
+                  tincidunt ipsum at.
+                </p>
+                <div class="son3">
+                  <h2 class="son2">$ 15.5</h2>
+                  <button class="ShoppingCartSimple">
+                    <img src="./img/svg/ShoppingCartSimple.svg" />
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <nav class="sit-nav">
+        <div class="conteiner sitnav-conteiner">
+          <div class="vvv">
+            <img src="./img/svg/logo.svg" alt="logo" />
+
+            <p class="text4">
+              There are people who can’t start their day without having a
+              freshly brewed cup of coffee and we understand them.
+            </p>
+            <div class="iconss">
+              <img src="./img/svg/x.svg" alt="x" />
+              <img src="./img/svg/f.svg" alt="facebook" />
+              <img src="./img/svg/w.svg" alt="WhatsApp" />
+              <img src="./img/svg/Instagram.svg" alt="Instagram" />
+              <img src="./img/svg/Youtube.svg" alt="Youtube" />
+              <img src="./img/svg/Tiktok.svg" alt="Tiktok" />
+            </div>
+          </div>
+          <div class="www">
+            <h2 class="contact">Contact Us</h2>
+            <div class="abs">
+              <img src="./img/svg/fi-rr-marker.svg" alt="" />
+              <p class="text5">72, Wall street, King Road, NY 20110</p>
+            </div>
+            <div class="abs">
+              <img src="./img/svg/tel.svg" alt="telefon" />
+              <p class="text5">800.275.8777</p>
+            </div>
+            <div class="abs">
+              <img src="./img/svg/sms.svg" alt="sms" />
+              <p class="text5">ngopiloer@gmail.com</p>
+            </div>
+          </div>
+          <div class="hhh">
+            <h2 class="contact">Subscribe To Newsletter</h2>
+            <input type="text" placeholder="Your e-mail address" />
+            <div class="fff"><button class="btn">Subscribe</button></div>
+            <p class="text6">
+              Sign up with your email address to receive news and updates
+            </p>
+          </div>
+        </div>
+        <hr class="dd" />
+
+        <p class="text7">Copyright ©2023 NgopiLoer. All rights reserved.</p>
+      </nav>
+    </footer>
   </body>
 </html>
